@@ -54,8 +54,8 @@ public final class COMUtil {
 		
 		if(type==Variant.VariantEmpty) return null;
 		else if(type==Variant.VariantNull) return null;
-		else if(type==Variant.VariantShort) return new Short(variant.toShort());
-		else if(type==Variant.VariantInt) return Constants.Integer(variant.toInt());
+		else if(type==Variant.VariantShort) return Short.valueOf(variant.toShort());
+		else if(type==Variant.VariantInt) return Integer.valueOf(variant.toInt());
 		else if(type==Variant.VariantFloat) return new Float(variant.toFloat());
 		else if(type==Variant.VariantDouble) return new Double(variant.toDouble());
 		else if(type==Variant.VariantCurrency) {
@@ -76,7 +76,7 @@ public final class COMUtil {
 					l=0;
 				}
 			}
-			return new Long(l);
+			return Long.valueOf(l);
 		}
 		else if(type==Variant.VariantObject) return variant.toEnumVariant();
 		else if(type==Variant.VariantDate) return new DateTimeImpl((long)variant.toDate(),true);
